<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.nikitamaslov.loginpresentation.viewmodel.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6">

            <EditText
                style="@style/EditText"
                android:layout_gravity="center"
                android:hint="@string/hint_first_name"
                android:inputType="textPersonName"
                android:text="@={viewmodel.firstName}" />

            <EditText
                style="@style/EditText"
                android:layout_gravity="center"
                android:hint="@string/hint_last_name"
                android:inputType="textPersonName"
                android:text="@={viewmodel.lastName}" />

            <EditText
                style="@style/EditText"
                android:layout_gravity="center"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:text="@={viewmodel.email}" />

            <EditText
                style="@style/EditText"
                android:layout_gravity="center"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:text="@={viewmodel.password}" />

            <ProgressBar
                style="@style/ProgressBar"
                android:layout_gravity="center"
                android:visibility="@{viewmodel.loading ? View.VISIBLE : View.INVISIBLE}" />

            <TextView
                style="@style/Status"
                android:layout_gravity="center"
                android:visibility="@{viewmodel.loading ? View.INVISIBLE : View.VISIBLE}"
                app:stringResId="@{viewmodel.status}" />

            <Button
                style="@style/PrimaryButton"
                android:layout_gravity="center"
                android:onClick="@{() -> viewmodel.register()}"
                android:text="@string/action_register" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
